FIX: wrong background

--- a/ui/src/inbox/style.css
+++ b/ui/src/inbox/style.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-#app {
+html {
   background: url(./assets/overlay.png) repeat;
   background-color: #242424;
 
